# llama-workflow-groq

./: LICENSE  MakeFile  README.md  main.py  pyproject.toml
Data/: teste copy.txt  teste.txt
config/: baseenv.py
workflow/: embedder.py  rag_workflow.py  vector_store.py  workflow_utils.py
